--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "register-service-worker": "^1.0.0",
+    "v-offline": "^1.0.9",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   },
